--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "griddle-react": "^0.6.1",
+    "jquery": "^3.1.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "webpack": "^1.13.1",
