--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jquery": "^3.1.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "socket.io": "^1.4.8",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
